## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = foreign

noinst_LIBRARIES = libcgreen.a

INCLUDES = -I./include

libcgreen_a_SOURCES =  src/unit.c src/messaging.c src/breadcrumb.c src/reporter.c src/assertions.c src/vector.c src/mocks.c src/constraint.c src/parameters.c src/text_reporter.c 

EXTRA_DIST = LICENSE README VERSION
