AC_INIT([cgreen] , [1.0.beta1], [bug-report@address])
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
#libtool (builds .la, .a and .so)
AC_PROG_LIBTOOL
#static lib (comment libtool and uncomment these)
#AC_PROG_RANLIB
AC_PROG_CC
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_SRCDIR([src/unit.c])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
